# RexxJS

./: .eslintrc.json  .gitignore  .history  .list-of-public-lib-publishers.csv  BUILDING.md  CHECKPOINT-TECH.md  CLAUDE.md  DOM_TODO.md  LLM.md  README.md  WHAT_THIS_IS.md  build-all-modules.sh  ci.sh  create-pkg-binary.js  dogfood-tests.sh  future_rexxjs_improvements.md  human_actions.md  make-binary.sh  package-lock.json  package.json  renderer-TODO.md  rexx_improvements.md  to-move.md
build-scripts/: strip-bundle-dependencies.js
core/: .gitignore  .rexxt-capabilities.js  CLAUDE.md  DEMO_PAGE_TESTING.md  EXAMPLES.md  FUNCTION_METADATA_SYSTEM.md  Quick_reference_Practical_examples_Getting_started.md  REXXT_GUIDE.md  Relative_Path_Resolution_Ambiguity.md  TESTING_PROTOCOL.md  TUTORIAL.md  debug_array_get.rexx  debug_array_set.rexx  debug_indexing.rexx  function_piping_plan.md  install.sh  jest.config.js  n-indexing-analysis.md  os_functions_for_consideration.md  package-lock.json  package.json  playwright.config.js  process.log.checkpoint  rexx  rexxt  simple_caller.rexx  simple_modifier.rexx  test_array_assignment.rexx  test_array_copy.rexx  test_array_get_pure.rexx  test_array_indexing.rexx  test_array_mutation.rexx  test_array_set.rexx  test_array_set_return.rexx  test_copy.rexx  test_copy_behavior.rexx  test_simple_copy.rexx  webpack.config.js  working_directory_thoughts.md
examples/rexx-a-sketch/src-tauri/: Cargo.toml  tauri.conf.json
examples/rexx-a-sketch/src-tauri/capabilities/: default.json
examples/rexx-a-sketch/src-tauri/src/: lib.rs  main.rs
(+1437 files in other folders)
